# battleship-game

./: .gitignore  Pipfile  README.md  ai.py  app.py  dodo.py  game.py  gui_draft.py  menu.py  menu_draft.py  pyproject.toml  template.py
battleship/: __init__.py  __main__.py
battleship/gui/: __init__.py  app.py  game.py  gui_draft.py  menu.py  styles.py
battleship/logic/: __init__.py  ai.py  ai_tests.txt  game.py  game_tests.py  network.py
battleship/resources/: __init__.py
battleship/translation/: __init__.py
battleship/translation/ru/LC_MESSAGES/: messages.mo  messages.po
battleship/util/: __init__.py  config.py  image.py
docs/: battleship.gui.rst  battleship.logic.rst  battleship.resources.rst  battleship.rst  battleship.translation.rst  battleship.util.rst  conf.py  index.rst
docs/draft/: menu_draft.py
tests/: test_gui_game.py  test_logic_game.py
train/: env.py  model_single.py  model_stats.py  models.py  random_stats.py  test.py  train.ipynb  train.py  train_ppo.ipynb
