[project]
name = "Battleship"
version = "0.1.0"
description = "Exam project for PythonDevelopment2023 course"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "COPYING"}
authors = [
 {name = "Timur Petrov", email = "s02200459@gse.cs.msu.ru"},
 {name = "Neil Nenakhov", email = "mail@example.com"}
]

keywords = ["tkinter", "asyncio", "project"]
classifiers = [
      "Development Status :: 4 - Beta",
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: MIT License",
      "Operating System :: OS Independent",
]

dependencies = ["Sphinx", "doit", "flake8", "pydocstyle", "wheel", "setuptools", "pillow"]

[project.gui-scripts]
play-battleship = "battleship:main"

[build-system]
requires = ["Sphinx", "build", "doit", "flake8", "pydocstyle", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
battleship = "battleship"

[tool.setuptools.package-data]
battleship = ["translation/ru/*/*.mo", "resources/images/*"]