[project]
name = "Battleship"
version = "0.0.1"
description = "Battleship game"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
 {name = "Timur Petrov"},
 {name = "Neil Nenakhov"}
]

keywords = ["tkinter", "asyncio", "project"]
classifiers = [
      "Development Status :: 4 - Beta",
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: MIT License",
      "Operating System :: OS Independent",
]

dependencies = ["pillow"]

[project.gui-scripts]
play-battleship = "battleship:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
battleship = "battleship"

[tool.setuptools.package-data]
battleship = ["translation/ru/*/*.mo", "resources/images/*"]